# python-modsecurity

./: README.md  pyproject.toml  setup.py
modsecurity/: __init__.py  __init__.pyi  modsecurity.pyi  modsecurity.pyx
modsecurity/include/: libmodsecurity.pxd
modsecurity/lib/: libModSecurity.lib
