[project]
name = "python-modsecurity"
description = "Python bindings for libModSecurity C++ Library."
readme = {file = "README.md", content-type = "text/markdown"}
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Cython",
]

[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"